<resources>
    <string name="app_name">FH Task</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_goals">Goals</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="your_info">Your Info</string>
    <string name="know_you_better">Know You Better</string>
    <string name="know_your_risk">Know Your Risk</string>
    <string name="your_family">Your Family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="purchase_price">Purchase price</string>
    <string name="number_of_units">Number of units</string>
    <string name="date_of_purchase">Date Of Purchase</string>
    <string name="who_is_this_investment_for">Who is this investment for? *</string>
    <string name="is_the_equity_one_time_or_recurring">Is the equity one time or recurring?</string>
    <string name="fixed">Fixed</string>
    <string name="variable">Variable</string>
    <string name="title_activity_main">MainActivity</string>
</resources>