<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.GoalsFragment">

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape_pink"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/your_info"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <TextView
            android:id="@+id/tv_better"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape_pink"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/know_you_better"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <TextView
            android:id="@+id/tv_risk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape_pink"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/know_your_risk"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <TextView
            android:id="@+id/tv_family"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape_pink"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/your_family"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-10dp"
        android:layout_below="@id/ll_button">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_more_vert_24"
            android:background="@drawable/orange_rect"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:background="@drawable/circle_white"
            android:elevation="3dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="4" />
    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_button"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/btn_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.3"
            android:background="@drawable/bg_button_left"
            android:contentDescription="left_arrow"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.4"
            android:background="@drawable/bg_form"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <ImageButton
            android:id="@+id/btn_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.3"
            android:background="@drawable/bg_button_right"
            android:contentDescription="left_arrow"
            android:src="@drawable/ic_baseline_arrow_forward_24" />

    </LinearLayout>

</RelativeLayout>